# akrobat

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  akrobat.includes  frames.gv  mainpage.dox  manifest.xml  package.xml  package.xml~  test_map.pgm
akrobat/: CMakeLists.txt  package.xml
akrobat/config/: dynamixel_params.yaml  localization_param.yaml
akrobat/launch/: AkrobatMaster.launch  dynamixel.launch  robot_localization.launch
akrobat/rviz/: akrobat.rviz
akrobat/scripts/: dynamixel_joint_state_publisher.py
akrobat_cam/: CMakeLists.txt  package.xml
akrobat_cam/launch/: Akrobat_Cam.launch  Akrobat_Pico.launch  Map.launch
akrobat_moveit_config/: CMakeLists.txt  _setup_assistant  package.xml
akrobat_moveit_config/config/: fake_controllers.yaml  hexapod.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
akrobat_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
cam_akrobat/: CMakeLists.txt  package.xml  setup.py
cam_akrobat/launch/: Akrobat_cam.launch  Map.launch  cam.launch
cam_akrobat/src/: cam_driver
config/: akrobat_controllers.yaml  akrobat_controllersbein2.yaml  akrobat_controllerss.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  dynamixel_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  localization_param.yaml
dynamixel_motor/: CMakeLists.txt  package.xml  setup.py
dynamixel_motor/msg/: dynamixel.msg
include/: Translater.h
include/akrobat/: Akrobat.h  Akrobat.h~  CoordinateSystem.h  CoordinateSystemStruct.h  FloatJoint.h  FloatJointStruct.h  Globals.h  HardwareInterface.h  Leg.h  LegSetting.h  LegSettingStruct.h  LegStruct.h  MotorState.h  MotorStateStruct.h  RumblePad2.h  RumblePad2Struct.h  Settings.h  Trajectory.h  TrajectorySettings.h  TrajectoryStruct.h  Translater.h  akrobat_init.h  movement.h
launch/: AkrobatMaster.launch  AkrobatMaster.launch~.html  AkrobatPi.launch  AkrobatViw.launch  MoveitAkrobatMaster.launch  akrobat_map.launch  akrobat_navigation.launch  akrobat_network.launch  akrobat_raspi.launch  akrobat_real.launch  akrobat_real_pi.launch  akrobat_sim.launch  commander.launch  dynamixel.launch  robot_localization.launch  rtabmap.launch
map/: carto-neu.pgm  carto-neu.yaml
msg/: movement.msg
nodes/: smach_example_state_machine.py
pico_flexx_driver/royale/libroyale-4.10.0.162-LINUX-x86-64Bit/python/swig/: CMakeLists.txt  roypy.h  roypy.i
pico_flexx_driver/royale/libroyale-4.10.0.162-LINUX-x86-64Bit/samples/: CMakeLists.txt  README_samples.md
pico_flexx_driver/royale/libroyale-4.10.0.162-LINUX-x86-64Bit/samples/cpp/sampleCameraInfo/: CMakeLists.txt  sampleCameraInfo.cpp
pico_flexx_driver/royale/libroyale-4.10.0.162-LINUX-x86-64Bit/samples/cpp/sampleExportPLY/: CMakeLists.txt
pico_flexx_driver/royale/libroyale-4.10.0.162-LINUX-x86-64Bit/samples/cpp/sampleIReplay/: CMakeLists.txt
pico_flexx_driver/royale/libroyale-4.10.0.162-LINUX-x86-64Bit/samples/cpp/sampleMultiCamera/: CMakeLists.txt
pico_flexx_driver/royale/libroyale-4.10.0.162-LINUX-x86-64Bit/samples/cpp/sampleOpenCV/: CMakeLists.txt
pico_flexx_driver/royale/libroyale-4.10.0.162-LINUX-x86-64Bit/samples/cpp/sampleQtViewer/: CMakeLists.txt
pico_flexx_driver/royale/libroyale-4.10.0.162-LINUX-x86-64Bit/samples/cpp/sampleQtViewer/inc/: sampleQtViewer.hpp
pico_flexx_driver/royale/libroyale-4.10.0.162-LINUX-x86-64Bit/samples/cpp/sampleQtViewer/src/: main.cpp  mainwindow.ui  sampleQtViewer.cpp
pico_flexx_driver/royale/libroyale-4.10.0.162-LINUX-x86-64Bit/samples/cpp/sampleROS/: CMakeLists.txt
pico_flexx_driver/royale/libroyale-4.10.0.162-LINUX-x86-64Bit/samples/cpp/sampleROS/royale/include/royale/: BridgeController.hpp  CameraManager.hpp  Definitions.hpp  DepthData.hpp  DepthIRImage.hpp  ExposureMode.hpp  FilterLevel.hpp  ICameraDevice.hpp  IExtendedData.hpp  IRecordStopListener.hpp  IReplay.hpp  ModuleConfigData.hpp  String.hpp  Variant.hpp
pico_flexx_driver/royale/libroyale-4.10.0.162-LINUX-x86-64Bit/samples/cpp/sampleROS2/: CMakeLists.txt  README.md  package.xml  plugins.xml
pico_flexx_driver/royale/libroyale-4.10.0.162-LINUX-x86-64Bit/samples/cpp/sampleROS2/include/sampleROS2/: RoyaleControl.hpp  RoyaleInRos.hpp
pico_flexx_driver/royale/libroyale-4.10.0.162-LINUX-x86-64Bit/samples/cpp/sampleROS2/launch/: camera_driver.launch.py
pico_flexx_driver/royale/libroyale-4.10.0.162-LINUX-x86-64Bit/samples/cpp/sampleROS2/src/: RoyaleControl.cpp  RoyaleInRos.cpp  main.cpp
pico_flexx_driver/royale/libroyale-4.10.0.162-LINUX-x86-64Bit/samples/cpp/sampleRecordRRF/: CMakeLists.txt  sampleRecordRRF.cpp
pico_flexx_driver/royale/libroyale-4.10.0.162-LINUX-x86-64Bit/samples/cpp/sampleRetrieveData/: CMakeLists.txt  sampleRetrieveData.cpp
pico_flexx_driver/royale/libroyale-4.10.0.162-LINUX-x86-64Bit/samples/cpp/sampleSlave/: CMakeLists.txt
pico_flexx_driver/royale/libroyale-4.10.0.162-LINUX-x86-64Bit/samples/cpp/sampleTcpClient/: CMakeLists.txt  sampleTcpClient.cpp
pico_flexx_driver/royale/libroyale-4.10.0.162-LINUX-x86-64Bit/samples/inc/sample_utils/: PlatformResources.hpp
rviz/: akrobat_new.rviz  demo.rviz
scripts/: dynamixel_joint_state_publisher.py
src/: akrobat_init.cpp  akrobat_main.cpp  commander.cpp  test_publisher.cpp  test_subscriber.cpp
src/akrobat/: Akrobat.cpp  Akrobat.cpp~  Controller.cpp  CoordinateSystem.cpp  FloatJoint.cpp  Globals.cpp  HardwareInterface.cpp  JointStateToDynamixel.cpp  Joypad.cpp  Leg.cpp  LegSetting.cpp  MotorState.cpp  RumblePad2.cpp  Trajectory.cpp  TrajectorySettings.cpp  (+7 more)
srv/: Joint_position.srv
startup/: launch_cam.sh  launch_main.sh  launch_master.sh
stl/: coxa_l_link.stl  coxa_r_link.stl  femur_link.stl  tibia_link.stl
urdf/: Sechsbeiner.urdf  hexapod.urdf  hexapod.urdf.bu2  hexapod.urdf.xacro.bu
(+399 files in other folders)
