<?xml version="1.0"?>
<package format="2">
  <name>akrobat</name>
  <version>0.0.1</version>
  <description>The akrobat package</description>


  <maintainer email="t.ihme@hs-mannheim.de">Thomas Ihme</maintainer>

  <license>Good Boy License</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamixel_controllers</build_depend>
  <build_depend>dynamixel_driver</build_depend>
  <build_depend>dynamixel_msgs</build_depend>
  <build_depend>dynamixel_tutorials</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>dynamixel_controllers</exec_depend>
  <exec_depend>dynamixel_driver</exec_depend>
  <exec_depend>dynamixel_msgs</exec_depend>
  <exec_depend>dynamixel_tutorials</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
