<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>royale_in_ros2</name>
  <version>0.0.1</version>
  <description>This example shows the integration of Royale into ROS2.</description>
  <maintainer email="info@pmdtec.com">PMD</maintainer>
  <license>Royale License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rviz_common</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rcutils</depend>
  <depend>rviz2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="plugins.xml"/>
  </export>
</package>
